--- a/intro-api/package.json
+++ b/intro-api/package.json
@@ -2,10 +2,11 @@
   "name": "intro-api",
   "version": "1.0.0",
   "description": "api",
-  "main": "importing.js",
+  "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npx nodemon index.js"
   },
   "author": "",
   "license": "ISC",
